load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

package(default_visibility = ["//services:__subpackages__"])

exports_files(["tsconfig.json"])

k8s_objects(
    name = "k8s",
    objects = [
        "//packages/kubernetes:defaults",
        "//services/gateway:k8s",
        "//services/idea:k8s",
        "//services/idea-read:k8s",
        "//services/authentication:k8s",
        "//services/user:k8s",
        "//services/user-read:k8s",
        "//services/mailing:k8s",
        "//services/admin:k8s",
    ],
)

k8s_objects(
    name = "microk8s",
    objects = [
        "//packages/kubernetes:microk8s_defaults",
        "//services/gateway:microk8s",
        "//services/idea:microk8s",
        "//services/idea-read:microk8s",
        "//services/authentication:microk8s",
        "//services/user:microk8s",
        "//services/user-read:microk8s",
        "//services/mailing:microk8s",
        "//services/admin:microk8s",
    ],
)
