load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

package(default_visibility = ["//services:__subpackages__"])

exports_files(["tsconfig.json"])

pkg_npm(
    name = "config_pkg",
    package_name = "@centsideas/config",
    deps = ["//packages/config"],
)

pkg_npm(
    name = "dependency_injection_pkg",
    package_name = "@centsideas/dependency-injection",
    deps = ["//packages/dependency-injection"],
)

pkg_npm(
    name = "enums_pkg",
    package_name = "@centsideas/enums",
    deps = ["//packages/enums"],
)

pkg_npm(
    name = "event_sourcing_pkg",
    package_name = "@centsideas/event-sourcing",
    deps = ["//packages/event-sourcing"],
)

pkg_npm(
    name = "models_pkg",
    package_name = "@centsideas/models",
    deps = ["//packages/models"],
)

pkg_npm(
    name = "rpc_pkg",
    package_name = "@centsideas/rpc",
    deps = ["//packages/rpc"],
)

pkg_npm(
    name = "schemas_pkg",
    package_name = "@centsideas/schemas",
    deps = ["//packages/schemas"],
)

pkg_npm(
    name = "testing_pkg",
    package_name = "@centsideas/testing",
    deps = ["//packages/testing"],
)

pkg_npm(
    name = "types_pkg",
    package_name = "@centsideas/types",
    deps = ["//packages/types"],
)

pkg_npm(
    name = "utils_pkg",
    package_name = "@centsideas/utils",
    deps = ["//packages/utils"],
)

k8s_objects(
    name = "k8s",
    objects = [
        "//packages/kubernetes:defaults",
        "//services/gateway:k8s",
        "//services/idea:k8s",
        "//services/idea-read:k8s",
        "//services/authentication:k8s",
        "//services/user:k8s",
        "//services/user-read:k8s",
        "//services/mailing:k8s",
        "//services/admin:k8s",
        "//services/search:k8s",
    ],
)

k8s_objects(
    name = "microk8s",
    objects = [
        "//packages/kubernetes:microk8s_defaults",
        "//services/gateway:microk8s",
        "//services/idea:microk8s",
        "//services/idea-read:microk8s",
        "//services/authentication:microk8s",
        "//services/user:microk8s",
        "//services/user-read:microk8s",
        "//services/mailing:microk8s",
        "//services/admin:microk8s",
        "//services/search:microk8s",
    ],
)
