load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

k8s_deploy(
    name = "kafka",
    template = ":kafka.yaml",
)

k8s_deploy(
    name = "certificate_issuer",
    template = ":certificate-issuer.yaml",
)

k8s_deploy(
    name = "database_storage",
    template = ":database-storage.yaml",
)

k8s_deploy(
    name = "config",
    template = ":config.yaml",
)

k8s_deploy(
    name = "ingress",
    template = ":ingress.yaml",
)
