load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "pkg_web")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@npm_bazel_terser//:index.bzl", "terser_minified")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//history-server:index.bzl", "history_server")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")
load("//packages/angular-bazel:tools/angular_ts_library.bzl", "ng_ts_library")
load("//packages/angular-bazel:tools/insert_html_assets.bzl", "insert_html_assets")

package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

sass_binary(
    name = "styles",
    src = "styles.sass",
)

ng_ts_library(
    name = "dev_src",
    srcs = ["main.dev.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        "//services/admin-client/app:dev",
        "@npm//@angular/platform-browser",
    ],
)

ts_devserver(
    name = "dev_server",
    additional_root_paths = ["centsideas/services/admin-client/_"],
    entry_module = "centsideas/services/admin-client/main.dev",
    port = 4201,
    scripts = [
        "@npm//:node_modules/tslib/tslib.js",
        "//packages/angular-bazel:rxjs_umd_modules",
        "@npm//socket.io-client:socket.io-client__umd",
    ],
    serving_path = "/bundle.min/bundle.js",
    static_files = [
        "@npm//:node_modules/zone.js/dist/zone.min.js",
        ":asset_injected_index_html",
        ":styles.css",
    ],
    deps = [":dev_src"],
)

ng_ts_library(
    name = "prod_src",
    srcs = ["main.prod.ts"],
    tsconfig = "//services/admin-client:tsconfig.json",
    deps = [
        "//services/admin-client/app:prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = "//packages/angular-bazel:rollup.config.js",
    entry_point = "main.prod.ts",
    output_dir = True,
    deps = [
        ":prod_src",
        "@npm//rollup-plugin-commonjs",
        "@npm//rollup-plugin-node-resolve",
    ],
)

terser_minified(
    name = "bundle.min",
    src = ":bundle",
    config_file = "//packages/angular-bazel:terser.config.json",
)

insert_html_assets(
    name = "asset_injected_index_html",
    outs = ["_prod_app/services/admin-client/index.html"],
    asset_paths = [
        "$(execpath styles.css)",
        "$(execpath @npm//:node_modules/zone.js/dist/zone.min.js)",
        "$(execpath bundle.min)/bundle.js",
    ],
    data = [
        ":bundle.min",
        ":index.html",
        ":styles.css",
        "@npm//:node_modules/zone.js/dist/zone.min.js",
    ],
    html_file = ":index.html",
)

pkg_web(
    name = "prod_app",
    srcs = [
        ":asset_injected_index_html",
        ":bundle.min",
        ":favicon.ico",
        ":styles.css",
        "@npm//:node_modules/zone.js/dist/zone.min.js",
    ],
)

history_server(
    name = "prod_server",
    data = [":prod_app"],
    templated_args = ["-a $$(rlocation $(rootpath :prod_app))"],
)

ts_library(
    name = "server_lib",
    srcs = ["server.ts"],
    deps = [
        "//services/admin-client/app:server",
        "@npm//@angular/core",
        "@npm//@nguniversal/express-engine",
        "@npm//@types/cookie-parser",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//cookie-parser",
        "@npm//express",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "admin-client",
    data = [
        ":prod_app",
        ":server_lib",
    ],
    entry_point = ":server.ts",
)

nodejs_image(
    name = "prod_server_image",
    data = [
        ":prod_app",
        ":server_lib",
    ],
    entry_point = ":server.ts",
)

k8s_deploy(
    name = "k8s",
    images = {
        "admin-client:placeholder_name": ":prod_server_image",
    },
    template = ":admin-client.yaml",
)

microk8s_deploy(
    name = "microk8s",
    images = {
        "admin-client:placeholder_name": ":prod_server_image",
    },
    template = ":admin-client.yaml",
)
