load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//:__subpackages__"])

alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

k8s_deploy(
    name = "deploy",
    images = {
        "gcr.io/internal-200822/src:nodejs_image": "//src:image",
    },
    template = ":deployment.yaml",
)
