load("@npm_bazel_typescript//:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

exports_files(["ngsw-config.json"])

ts_config(
    name = "tsconfig-test",
    src = ":tsconfig.spec.json",
    deps = [":tsconfig.json"],
)

ts_config(
    name = "tsconfig-server",
    src = ":tsconfig.server.json",
    deps = [":tsconfig.json"],
)
