load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

lib_deps = [
    "//:register-aliases.js",
    "//packages/enums:lib",
    "//packages/event-sourcing:lib",
    "//packages/models:lib",
    "//packages/utils:lib",
    "@npm//@types/async-retry",
    "@npm//@types/body-parser",
    "@npm//@types/express",
    "@npm//@types/mongodb",
    "@npm//async-retry",
    "@npm//body-parser",
    "@npm//express",
    "@npm//inversify",
    "@npm//mongodb",
    "@npm//reflect-metadata",
]

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = lib_deps,
)

nodejs_image(
    name = "image",
    data = [":lib"],
    entry_point = ":index.ts",
)

k8s_deploy(
    name = "k8s",
    images = {
        "consumer:placeholder_name": ":image",
    },
    template = ":consumer.yaml",
)
