load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/environment",
        "//packages/models",
        "//packages/rpc",
        "//packages/schemas",
        "//packages/utils",
        "@npm//@types/body-parser",
        "@npm//@types/cookie-parser",
        "@npm//@types/cors",
        "@npm//@types/express",
        "@npm//@types/helmet",
        "@npm//@types/node",
        "@npm//body-parser",
        "@npm//cookie-parser",
        "@npm//cors",
        "@npm//express",
        "@npm//helmet",
        "@npm//inversify",
        "@npm//inversify-express-utils",
    ],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//packages/rpc:proto_files",
    ],
    entry_point = ":index.ts",
)

k8s_deploy(
    name = "k8s",
    images = {"gateway:placeholder_name": ":image"},
    template = ":gateway.yaml",
)

microk8s_deploy(
    name = "microk8s",
    images = {"gateway:placeholder_name": ":image"},
    template = ":gateway.yaml",
)

ts_jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
)
