load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@microk8s_deploy//:defaults.bzl", "microk8s_deploy")
load("@centsideas//packages/jest:jest.bzl", "ts_jest")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages/config",
        "//packages/dependency-injection",
        "//packages/enums",
        "//packages/models",
        "//packages/rpc",
        "//packages/schemas",
        "//packages/types",
        "//packages/utils",
        "@npm//@types/body-parser",
        "@npm//@types/cookie-parser",
        "@npm//@types/cors",
        "@npm//@types/express",
        "@npm//@types/helmet",
        "@npm//@types/node",
        "@npm//body-parser",
        "@npm//cookie-parser",
        "@npm//cors",
        "@npm//express",
        "@npm//helmet",
        "@npm//inversify",
        "@npm//inversify-express-utils",
        "@npm//reflect-metadata",
    ],
)

nodejs_image(
    name = "image",
    data = [
        ":lib",
        "//packages/schemas:all_proto",
    ],
    entry_point = ":index.ts",
)

ts_jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    test_lib = "lib",
    tsconfig = "//:tsconfig.json",
)

k8s_deploy(
    name = "gateway",
    images = {"gateway:placeholder_name": ":image"},
    template = ":gateway.yaml",
)

k8s_deploy(
    name = "config",
    template = ":gateway-config.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":gateway",
        ":config",
    ],
)

microk8s_deploy(
    name = "microk8s_gateway",
    images = {"gateway:placeholder_name": ":image"},
    template = ":gateway.yaml",
)

microk8s_deploy(
    name = "microk8s_config",
    template = ":gateway-config.yaml",
)

k8s_objects(
    name = "microk8s",
    objects = [
        ":microk8s_gateway",
        ":microk8s_config",
    ],
)
